# gshutdown

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  PKGBUILD.in  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gshutdown.desktop.in  gshutdown.glade  gshutdown.lsm.in  gshutdown.spec.in
autopackage/: default.apspec.in
lang/: POTFILES.in  gshutdown.pot  pl.po  ru.po  sr.po
man/: Makefile.am  Makefile.in  gshutdown.1
po/: bg.po  ca.po  da.po  de.po  es.po  fr.po  hu.po  it.po  no.po  pt.po  ru.po  sr.po  sr@Latn.po  sv.po  zh.po
src/: Makefile.am  Makefile.in  action.c  action.h  args.c  args.h  bacon.c  bacon.h  binreloc.c  binreloc.h  callback.c  callback.h  callback_main_window.c  callback_main_window.h  debug.c  debug.h  detectwm.c  detectwm.h  eggtrayicon.c  eggtrayicon.h  gdm.c  gdm.h  gshutdown.glade  gui.c  gui.h  main.c  main.h  misc.c  misc.h  pconfirm.c  pconfirm.h  timer.c  timer.h  values.c  values.h
